Add user resource

--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,7 +1,7 @@
 <div class="ui small inverted menu">
   <div class="ui container">
     <a class="item">
-        Chatroom
+        <%= link_to "Chatroom", root_path, class: "item" %>
     </a>
     <a class="item">
         Messages
